Update Problem 7 Part 1